# jornada-de-dados

./: README.md
aula-000/: 002 - Configurar PYENV != Versoes Python.MD  003 - Configurar VENV projetos.MD  004 - Configurar PIPX.MD  005 - Instalar e Utilizar Poetry.MD  Instalacao_PYENV.MD
aula-000/projeto_django/: pyproject.toml
